--- a/app/assets/stylesheets/general/grid.scss
+++ b/app/assets/stylesheets/general/grid.scss
@@ -29,3 +29,20 @@
 .flex-1 {
   flex: 1;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+
+  .half-container {
+    width: 50%;
+
+    &:nth-of-type(1) {
+      padding-right: 1rem;
+    }
+
+    &:nth-of-type(2) {
+      padding-left: 1rem;
+    }
+  }
+}
