--- a/app/views/components/page_wrappers/page_component.html.erb
+++ b/app/views/components/page_wrappers/page_component.html.erb
@@ -1,3 +1,6 @@
 <div class="page-container">
-  <%= content %>
+  <%= render PageWrappers::NavigationComponent.new %>
+  <div class="page-content">
+    <%= content %>
+  </div>
 </div>
