--- a/app/views/controllers/welcome/index.html.erb
+++ b/app/views/controllers/welcome/index.html.erb
@@ -1,9 +1,8 @@
 <%= render PageWrappers::PageComponent.new do %>
-  <%= render PageWrappers::NavigationComponent.new %>
   <%= render Views::Welcome::Index::MapStatsComponent.new(world: @world) %>
   <%=
     react_component 'WorldMap',
-      component_id: 'world-map-wrapper',
+      component_id: 'world-map',
       worldUuid: @world.uuid,
       mapSize: Rails.configuration.map_size
   %>
