--- a/app/views/components/views/welcome/index/map_stats_component.html.erb
+++ b/app/views/components/views/welcome/index/map_stats_component.html.erb
@@ -1,5 +1,6 @@
 <section class="map-stats">
   <p>Total bottles in the sea - <%= total_bottles %></p>
   <p>Total bottles on the ground - <%= total_ground_bottles %></p>
+  <p>Total searchers - <%= total_searchers %></p>
   <p>World's age is <%= world_ticks %> ticks</p>
 </section>
