--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -23,4 +23,52 @@
       border-color: $sky400;
     }
   }
+
+  .form-select {
+    cursor: pointer;
+    position: relative;
+
+    .form-select-dropdown {
+      display: none;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      border: 1px solid $gray300;
+      border-radius: .125rem;
+
+      li {
+        background: $white;
+        padding: .5rem .75rem;
+
+        &:hover {
+          background: $gray200;
+        }
+      }
+    }
+
+    .form-select-dropdown {
+      display: block;
+      position: absolute;
+      z-index: 10;
+      left: 0;
+      top: 42px;
+    }
+  }
+
+  input[type="file"] {
+    display: none;
+  }
+
+  .file-uploader {
+    padding: 0.375rem;
+    background: $sky200;
+    margin-bottom: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+
+  .file-name {
+    margin-left: 1rem;
+  }
 }
